# cs-ds-practices

./: .gitignore  README.md  pyenv.sh
OSU/ComputerVision/hw01/: CSE5524-HW01-YuchenLiu.docx
OSU/ComputerVision/hw02/: HW02.docx  hw02.py
OSU/ComputerVision/hw03/: HW03.docx  hw03.py
OSU/ComputerVision/hw04/: HW4.docx  hw04.py
OSU/ComputerVision/hw05/: HW5.docx  hw05.py
OSU/ComputerVision/hw06/: HW6.docx  hw06.py
OSU/ComputerVision/hw07/: HW7.docx  hw07.py
OSU/ComputerVision/hw08/: HW08.docx  hw08.py
OSU/ComputerVision/hw09/: HW09.docx  hw09.py
OSU/ComputerVision/hw10/: HW10.docx  hw10.py
OSU/ComputerVision/project/: ProjectWord.docx  main.py
cppprojects/analygraph/: CMakeLists.txt
cppprojects/analygraph/src/: generation.hpp  (+2 more)
cppprojects/compsolve/: CMakeLists.txt
cppprojects/easysolve/: .gitignore  CMakeLists.txt
cppprojects/easysolve/src/: advancement.hpp  boundary_condition.hpp  field.hpp  head.hpp  index.hpp  main.cpp  mesh.hpp  problem.hpp  residual.hpp  scheme.hpp
cppprojects/src/: BC.hpp  H5wrapper.cpp  H5wrapper.hpp  RHS.cpp  RHS.hpp  WENOrun.hpp  array.hpp  average.cpp  conv.cpp  domain.hpp  ideal_gas.cpp  ideal_gas.hpp  input.hpp  one_sided_difference.cpp  post.hpp  profiler.hpp  scheme.hpp  split.hpp  temporal.cpp  temporal.hpp  test_case.hpp  visc.cpp  visc.hpp
cppprojects/wingame/: CMakeLists.txt
cppprojects/wingame/src/: main.cpp
poker/: poker.py
pyprojects/: myhelp.py
pyprojects/grocery/: main.py  vendors.py  walmart_query.txt
pyprojects/houseprice/: main.py
pyprojects/titanic/: main.py
pyprojects/volleyschedule/: kob.py  schedule.20.xlsx  schedule.22.xlsx  schedule.23.xlsx  schedule.23b.xlsx  schedule.24.8.xlsx  schedule.24.xlsx  schedule.26.xlsx  schedule.28.bk.xlsx  schedule.28.xlsx  schedule.32.xlsx  schedule.34.xlsx  valid_game_schedule.28.json  valid_game_schedule.32.json
titanic/: main.ipynb
(+117 files in other folders)
